--- a/cli-setup/templates/shared/package.json
+++ b/cli-setup/templates/shared/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "sequelize": "^6.6.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "mongoose": "^8.13.0"
   }
 }
