--- a/templates/sql/package.json
+++ b/templates/sql/package.json
@@ -11,7 +11,6 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-    
       "bcryptjs": "^2.4.3",
       "cloudinary": "^2.5.1",
       "cors": "^2.8.5",
@@ -21,10 +20,8 @@
       "joi": "^17.13.3",
       "jsonwebtoken": "^9.0.2",
       "nodemon": "^3.1.9",
-      "pg": "^8.13.1"
-    },
-    "devDependencies": {
-      "concurrently": "^9.1.2"
+      "pg": "^8.13.1",
+      "sequelize": "^6.6.5",
+      "uuid": "^8.3.2"
     }
   }
-  
